# mvx-challenge

mvx-challenge/: .gitattributes  devWallet.pem
mvx-challenge/break-lottery/: Cargo.toml  README.md
mvx-challenge/break-lottery/interaction/: devnet.snippets.sh
mvx-challenge/break-lottery/meta/: Cargo.toml
mvx-challenge/break-lottery/scenarios/: adder.scen.json  interactor_trace.scen.json
mvx-challenge/break-lottery/src/: lib.rs
mvx-challenge/break-lottery/tests/: adder_blackbox_test.rs  adder_blackbox_upgrade_test.rs  adder_blackbox_with_values_test.rs  adder_scenario_rs_test.rs  adder_test.rs  adder_whitebox_test.rs
mvx-challenge/break-lottery/wasm/: Cargo.toml
mvx-challenge/lottery-sc/: .gitignore  Cargo.toml
mvx-challenge/lottery-sc/interaction/: devnet.snippets.sh
mvx-challenge/lottery-sc/meta/: Cargo.toml
mvx-challenge/lottery-sc/scenarios/: adder.scen.json  interactor_trace.scen.json
mvx-challenge/lottery-sc/src/: another_possibly_good_version.rs  lib.rs  wrong_version.rs
mvx-challenge/lottery-sc/tests/: adder_blackbox_test.rs  adder_blackbox_upgrade_test.rs  adder_blackbox_with_values_test.rs  adder_scenario_rs_test.rs  adder_test.rs  adder_whitebox_test.rs
mvx-challenge/lottery-sc/wasm/: Cargo.toml
mvx-challenge/multi-token-contract/: Cargo.toml
mvx-challenge/multi-token-contract/meta/: Cargo.toml
mvx-challenge/multi-token-contract/scenarios/: adder.scen.json  interactor_trace.scen.json
mvx-challenge/subscription-contract/: Cargo.toml  multiversx.json  mxsc-template.toml
mvx-challenge/subscription-contract/interact/: Cargo.toml
(+43 files in other folders)
